# esp32s3-oscilloscope

./: .gitignore  AGENTS.md  CMakeLists.txt  Debugging Oscilloscope Signal Capture.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/osc_adc/: CMakeLists.txt  osc_adc.c
components/osc_adc/include/: osc_adc.h
components/osc_config/: CMakeLists.txt  osc_config.c
components/osc_config/include/: osc_config.h
components/osc_dsp/: CMakeLists.txt  osc_dsp.c
components/osc_dsp/include/: osc_dsp.h
components/osc_gen/: CMakeLists.txt  osc_gen.c
components/osc_pga/: CMakeLists.txt  osc_pga.c
components/osc_trigger/: CMakeLists.txt  osc_trigger.c
components/osc_usb/: CMakeLists.txt  osc_usb.c
components/soc_override/: CMakeLists.txt
docs/: CALIBRATION.md  configuration.md  pins.md  protocol.md
main/: CMakeLists.txt  idf_component.yml  main.c
pc_app/: OPEN_QUESTIONS.md  README.md  build.spec  main.py  requirements.txt  test_simulated.py  test_simulated_v2.py
pc_app/assets/: stylesheet.qss  stylesheet_light.qss
pc_app/config/: __init__.py
pc_app/core/: __init__.py  app_settings.py  data_store.py  device_controller.py  display_config.py  fft_engine.py  frame_parser.py  measurements_engine.py  render_pipeline.py  serial_reader.py
pc_app/docs/: protocol.md
pc_app/ui/: __init__.py  channel_panel.py  controls_panel.py  fft_widget.py  main_window.py  measurements_panel.py  pga_cal_dialog.py  status_bar.py  trigger_panel.py  waveform_widget.py  xy_widget.py
tools/: test_interface.py  test_simulated.py  test_stream.py
(+5 files in other folders)
